--- a/hugo.yml
+++ b/hugo.yml
@@ -1,6 +1,6 @@
 baseURL: 'https://example.org/'
 languageCode: 'en-us'
-title: 'Gig Vibe'
+title: 'Uni Gig'
 
 # theme: ["hugo-news"]
 #googleAnalytics: ""
